core_gps_visualization_app/static/core_gps_visualization_app/user/css/main.css
#chart-configuration {
    position: sticky;
    display: inline-block;
    vertical-align: top;
    width: 23%;
    min-width: 200px;
    min-height: 600px;
    float: left;
    top: 0px;
    border-radius: 5px;
    border: 5px solid #925520;
    margin: 10px;
    padding: 25px 25px 25px 25px;
}

#visualization {
    position: sticky;
    display: inline-block;
    vertical-align: top;
    width: 70%;
    min-width: 1000px;
    min-height: 600px;
    float: right;
    top: 0px;
    border-radius: 5px;
    border: 5px solid #925520;
    margin: 10px;
    padding: 25px 25px 25px 25px;
}

#id_data_source {
    font-size: 15px;
}

.forms-visu {
    margin: auto;
    margin-bottom: 20px;
    display: flex;
    flex-direction: column;
}

.btn-visu {
  display: flex;
  margin: auto
}

